Added all lib to ant classpath

--- a/build.xml
+++ b/build.xml
@@ -4,7 +4,11 @@
     <property name="artifacts" value="artifacts"/>
     <property file="${artifacts}/release.properties"/>
 
-	<taskdef resource="net/sf/antcontrib/antlib.xml" classpath="lib/ant-contrib.jar"/>
+	<taskdef resource="net/sf/antcontrib/antlib.xml">
+		<classpath>
+    		<dirset dir="lib"/>
+		</classpath>
+	</taskdef>
 
     <target name="release">
 		<sshexec host="${server.name}" username="${release.username}" password="${release.password}" command="mkdir -p ${server.path}/${release.path}" trust="true"/>
