--- a/build.xml
+++ b/build.xml
@@ -3,16 +3,16 @@
 
     <property name="artifacts" value="artifacts"/>
     <property file="${artifacts}/release.properties"/>
-    <property name="optional.file" value="scp.properties"/>
-    <available property="optional.file.exists" file="${optional.file}"/>
-    <target name="-load-optional-file" if="optional.file.exists">
-        <property file="${optional.file}"/>
-    </target>
 
     <taskdef resource="net/sf/antcontrib/antlib.xml" classpath="lib/ant-contrib.jar"/>
 
-    <target name="release" depends="-load-optional-file">
-	<sshexec host="${server.name}" username="${release.username}" password="${release.password}" command="mkdir -p ${server.path}/${release.path}" trust="true"/>
+    <target name="release">
+	<fail unless="server.username" message="server.username must be set"/>
+	<fail unless="server.keyfile" message="server.keyfile must be set"/>
+	<fail unless="server.name" message="server.name must be set"/>
+	<fail unless="server.path" message="server.path must be set"/>
+
+	<sshexec host="${server.name}" username="${server.username}" keyfile="${server.keyfile}" command="mkdir -p ${server.path}/${release.path}" trust="true"/>
         <for list="${release.files}" param="file">
             <sequential>
                 <scp file="${artifacts}/@{file}" todir="${release.username}:${release.password}@${server.name}:${server.path}/${release.path}" trust="true"/>
