Changed to use native scp and ssh instead of jcp - fix

--- a/build.xml
+++ b/build.xml
@@ -35,11 +35,11 @@
 	<native.sshexec host="${server.name}" command="mkdir -p ${server.path}/${release.path}"/>
         <for list="${release.files}" param="file">
             <sequential>
-                <native.scp file="${artifacts}/@{file}" todir="${release.username}:${release.password}@${server.name}:${server.path}/${release.path}" trust="true"/>
+                <native.scp file="${artifacts}/@{file}" todir="${release.username}:${release.password}@${server.name}:${server.path}/${release.path}"/>
                 <checksum file="${artifacts}/@{file}" algorithm="md5"/>
-                <scp file="${artifacts}/@{file}.md5" todir="${release.username}:${release.password}@${server.name}:${server.path}/${release.path}" trust="true"/>
+                <native.scp file="${artifacts}/@{file}.md5" todir="${release.username}:${release.password}@${server.name}:${server.path}/${release.path}"/>
                 <checksum file="${artifacts}/@{file}" algorithm="sha1"/>
-                <scp file="${artifacts}/@{file}.sha1" todir="${release.username}:${release.password}@${server.name}:${server.path}/${release.path}" trust="true"/>
+                <native.scp file="${artifacts}/@{file}.sha1" todir="${release.username}:${release.password}@${server.name}:${server.path}/${release.path}"/>
             </sequential>
         </for>
     </target>
